grammar.js
    program: $ => seq(
      seq(
        optional($.functions),
        optional($.data),
        optional($.transformed_data),
        optional($.parameters),
        optional($.transformed_parameters),
        optional($.model),
        optional($.generated_quantities),
      ),
    ),

    data: $ => seq(
      'data',
      $._variable_decls,
    ),

    parameters: $ => seq(
      'parameters',
      $._variable_decls,
    ),

    transformed_parameters: $ => seq(
      'transformed',
      'parameters',
      $._variable_decl_statements,
    ),

    model: $ => prec(1, seq(
      'model',
      $._variable_decl_statements,
    )),

    _variable_decl_statements: $ => seq(
      '{',
      repeat($.variable_declaration),
      repeat($._statement),
      '}',
    ),

    _variable_decls: $ => seq(
      '{',
      repeat($.variable_declaration),
      '}',
    ),

    // Function declaration
    variable_declaration: $ => prec(1, seq(
      $._var_type,
      $.identifier,
      optional($.dims),
      optional(seq('=', $._expression)),
      ';',
    )),

    _var_type: $ => choice(
      $.int_type,
      $.real_type,
      $.vector_type,
      $.ordered_type,
      $.positive_ordered_type,
      $.simplex_type,
      $.unit_vector_type,
      $.row_vector_type,
      $.matrix_type,
      $.cholesky_factor_cov_type,
      $.cholesky_factor_corr_type,
      $.cov_matrix_type,
      $.corr_matrix_type,
    ),

    int_type: $ => seq(
      'int',
      optional($.range_constraint),
    ),

    real_type: $ => seq(
      'real',
      optional($.range_constraint),
    ),

    vector_type: $ => seq(
      'vector',
      optional($.range_constraint),
      '[',
      $._expression,
      ']',
    ),

    ordered_type: $ => seq(
      'ordered',
      '[',
      $._expression,
      ']',
    ),

    positive_ordered_type: $ => seq(
      'positive_ordered',
      '[',
      $._expression,
      ']',
    ),

    simplex_type: $ => seq(
      'simplex',
      '[',
      $._expression,
      ']',
    ),

    unit_vector_type: $ => seq(
      'unit_vector',
      '[',
      $._expression,
      ']',
    ),

    row_vector_type: $ => seq(
      'row_vector',
      optional($.range_constraint),
      '[',
      $._expression,
      ']',
    ),

    matrix_type: $ => seq(
      'matrix',
      optional($.range_constraint),
      '[',
      $._expression,
      ',',
      $._expression,
      ']',
    ),

    cholesky_factor_corr_type: $ => seq(
      'cholesky_factor_corr',
      '[',
      $._expression,
      ']',
    ),

    cholesky_factor_cov_type: $ => seq(
      'cholesky_factor_cov',
      '[',
      $._expression,
      optional(
        seq(
          ',',
          $._expression,
        ),
      ),
      ']',
    ),

    corr_matrix_type: $ => seq(
      'corr_matrix',
      '[',
      $._expression,
      ']',
    ),

    cov_matrix_type: $ => seq(
      'cov_matrix',
      '[',
      $._expression,
      ']',
    ),

    // this parses differently than Stan. Stan does not allow
    // ANY <> expressions inside the
    range_constraint: $ => prec(PREC.RANGE, choice(
      $.range_empty,
      $.range_lower,
      $.range_upper,
      $.range_lower_upper,
    )),

    /* eslint-disable no-unused-vars */
    range_lower: $ => prec(PREC.RANGE, seq(
      '<',
      'lower',
      '=',
      $._range_expression,
      '>',
    )),

    dims: $ => seq(
      '[',
      commaSep($._expression),
      ']',
    ),

    /* eslint-disable no-unused-vars */
    identifier: $ => /[A-Za-z][A-Za-z0-9_]*/,
    /* eslint-enable no-unused-vars */

    // Expressions
    _expression: $ => choice(
      $._range_expression,
      $.conditional_expression,
      $.infix_op_expression,
      $.prefix_op_expression,
      $.postfix_op_expression,
      $.indexed_expression,
    ),

    // in order to deal with ambiguity of <> range expressions
    // cannot directly include logical infix operators.
    _range_expression: $ => choice(
      $._common_expression,
      alias($.infix_op_range_expression, $.infix_op_expression),
      alias($.prefix_op_range_expression, $.prefix_op_expression),
      alias($.postfix_op_range_expression, $.postfix_op_expression),
      alias($.indexed_range_expression, $.indexed_expression),
    ),

    // range constraints only allow a subset of expressions
    array_expression: $ => seq(
      '{',
      commaSep($._expression),
      '}',
    ),

    vector_expression: $ => prec(PREC.BRACKET, seq(
      '[',
      commaSep($._expression),
      ']',
    )),

    // operator expressions outside of range constraints
    infix_op_expression: ($) => {
      const ops = operators.infix.arithmetic.concat(operators.infix.logical);
      return choice(
        ...infixExpressions(ops, $._expression),
      );
    },

    indexed_expression: $ => prec.left(PREC.INDEX, seq(
      $._expression,
      '[',
      optional($.index),
      repeat(seq(',', optional($.index))),
      ']',
    )),

    // expressions inside of range constraints
    distr_expression: $ => prec(PREC.FUNCTION, seq(
      $.identifier,
      $.distr_argument_list,
    )),

    distr_argument_list: $ => prec.dynamic(1, seq(
      '(',
      $._expression,
      '|',
      commaSep($._expression),
      ')',
    )),

    index: $ => choice(
      $._expression,
      $.colon_expression,
      $.left_colon_expression,
      $.right_colon_expression,
    ),

    integer_literal: $ => /[0-9]+/,
    /* eslint-enable no-unused-vars */

    /* eslint-disable no-unused-vars */
    real_literal: $ => token(choice(
      /[0-9]*\.[0-9]+([eE][+-]?[0-9]+)?/,
      /[0-9]+\.([eE][+-]?[0-9]+)?/,
      /[0-9]+[eE][+-]?[0-9]+/,
    )),
    /* eslint-enable no-unused-vars */

    // Statements
    _statement: $ => choice(
      $.empty_statement,
      $.assignment_statement,
      $.sampling_statement,
      $.function_expression,
      $.log_prob_statement,
      $.target_statement,
      $.break_statement,
      $.continue_statement,
      $.print_statement,
      $.reject_statement,
      $.return_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.block_statement,
    ),

    /* eslint-disable no-unused-vars */
    assignment_statement: $ => prec(PREC.ASSIGN, seq(
      $.lhs,
      $.assignment_op,
      $._expression,
      ';',
    )),

    lhs: $ => seq(
      $.identifier,
      repeat(seq('[', commaSep1($.index), ']')),
    ),

    /* eslint-disable no-unused-vars */
    assignment_op: $ => choice(
      '<-',
      '=',
      '+=',
      '-=',
      '*=',
      '/=',
      '.*=',
      './=',
    ),
    /* eslint-enable no-unused-vars */

    sampling_statement: $ => seq(
      $._expression,
      '~',
      $.identifier,
      '(',
      commaSep($._expression),
      ')',
      optional($._truncation),
      ';',
    ),

    /* eslint-disable no-unused-vars */
    _truncation: $ => choice(
      $.lower_upper_truncation,
      $.lower_truncation,
      $.upper_truncation,
      $.empty_truncation,
    ),
    /* eslint-enable no-unused-vars */

    /* eslint-disable no-unused-vars */
    target_statement: $ => seq(
      'target',
      '+=',
      $._expression,
      ';',
    ),

    /* eslint-disable no-unused-vars */
    print_statement: $ => seq(
      'print',
      '(',
      commaSep(choice($._expression, $.string_literal)),
      ')',
      ';',
    ),

    // currently nested quotes not allowed
    /* eslint-disable no-unused-vars */
    string_literal: $ => /".*"/,
    /* eslint-enable no-unused-vars */

    for_statement: $ => prec(1, seq(
      'for',
      '(',
      $.identifier,
      'in',
      $._expression,
      optional(seq(':', $._expression)),
      ')',
      $._statement,
    )),

    comment: $ => token(choice(
      seq('//', /.*/),
      seq('#', /.*/),
      // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/',
      ),
    )),
    /* eslint-enable no-unused-vars */

  },
});
